@@ -1,6 +1,6 @@
 noinst_LTLIBRARIES = libutil.la
 
-include_HEADERS = util.h util2.h
+include_HEADERS = util.h util2.h pointer.tcc
 
 libutil_la_SOURCES = config.cc jid.cc log.cc nad.cc pool.cc sha.cc str.cc
 libutil_la_LIBADD = @LDFLAGS@
